--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <img src="assets/icon/scania.svg" class="logo" height="40px" />
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>
-      Tab 1
+      Scania Health Hub
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,7 +13,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Tab 1 eseses</ion-title>
     </ion-toolbar>
   </ion-header>
 
