--- a/src/app/explore-container/explore-container.component.html
+++ b/src/app/explore-container/explore-container.component.html
@@ -1,3 +1,9 @@
 <div id="container">
   <strong>{{ name }}</strong>
+  <div>teste</div>
+  <div>teste</div>
+  <div>teste</div>
+  <div>teste</div>
+  <div>teste</div>
+  <div>teste</div>
 </div>
