--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -9,3 +9,13 @@
 .bronze {
   color: #cd7f32;
 }
+
+ion-toolbar {
+  --background: #041E42;
+  --color: #fafafa;
+
+  --border-width: 2px 0;
+
+  --min-height: 66px;
+}
+
